--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,94 @@
+/* LAYOUT */
+
 body {
-  background-color: skyblue;
+  width: 100%;
+  text-align: center;
+
+
+}
+
+
+.topbar {
+  margin-left:0;
+  padding: 0;
+  top: 0;
+  width:100%;
+  height: 50px;
+  background-color: rgba(175, 111, 178, 1);
+  -webkit-box-shadow: 2px 2px 5px 0px #696969;
+  -moz-box-shadow: 2px 2px 5px 0px #696969;
+  box-shadow: 2px 2px 5px 0px #696969;
+  position: fixed;
+  right: 0;
+  left: 0;
+  margin-bottom: 0;
+  z-index: 100;
+    
+}
+
+.wrapper {
+  width: 100%;
+  margin: 75px auto 0;
+  text-align: center;
+}
+
+.recipe-box {
+  margin: 0 15%;
+  width: 80%;
+  height: 100%;
+  height: 1%; 
+  overflow: hidden;
+  text-align: center;
+}
+
+.single-recipe {
+  width: 220px;
+  height: 170px;
+  margin: 10px 10px 0;
+  border: 1px solid white;
+  position: relative;
+  display: inline-block;
+  float: left;
+}
+
+/* TEXT */
+
+header {
+  margin: .3em 0 0 18%;
+  float: left;
+}
+
+p {
+  line-height: 1.3;
+}
+
+.single-recipe .recipe-name {
+  text-align: left;
+  margin-top: .3em;
+  margin-left: 2.3em;
+  font-family: Tahoma, Verdana, Segoe, sans-serif;
+  font-size: 11px;
+  color: rgba(0,0,0,.7);
+}
+
+h1 {
+  font-family: 'Arvo', serif;
+  font-size: 3em;
+  color: white;
+  -webkit-text-shadow: 2px 2px rgba(0,0,0,.2);
+  -moz-text-shadow: 2px 2px rgba(0,0,0,.2);
+  text-shadow: 2px 2px rgba(0,0,0,.2);
+}
+
+h1 span {
+  font-family: 'Rouge Script', cursive;
+}
+
+/* IMAGES */
+img {
+  margin: 10px 10px 0;
+  border: 20px solid rgba(0, 0, 10, .1);
+  -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
+  -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
+  box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
 }
