--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,6 +5,9 @@
 <% end %>
 
 <%= form_for @user do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
   <%= f.label :email %>
   <%= f.email_field :email %>
 
