--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -42,10 +42,11 @@ body {
 }
 
 .single-recipe {
-  width: 220px;
+  width: 170px;
   height: 170px;
   margin: 10px 10px 0;
   border: 1px solid white;
+  background-color: rgba(230, 219, 195, 1);
   position: relative;
   display: inline-block;
   float: left;
@@ -86,7 +87,7 @@ h1 span {
 
 /* IMAGES */
 img {
-  margin: 10px 10px 0;
+  margin: 10px 0;
   border: 20px solid rgba(0, 0, 10, .1);
   -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
   -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
