--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .recipe-box {
-  margin: 0 15%;
+  margin: 0 auto;
   width: 80%;
   height: 100%;
   height: 1%; 
@@ -45,17 +45,19 @@ body {
   width: 170px;
   height: 170px;
   margin: 10px 10px 0;
-  border: 1px solid white;
   background-color: rgba(230, 219, 195, 1);
   position: relative;
   display: inline-block;
   float: left;
+  -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
+  -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
+  box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
 }
 
 /* TEXT */
 
 header {
-  margin: .3em 0 0 16%;
+  margin: .3em 0 0 11%;
   float: left;
 }
 
@@ -63,10 +65,11 @@ p {
   line-height: 1.3;
 }
 
+
+
 .single-recipe .recipe-name {
   text-align: left;
   margin-top: .3em;
-  margin-left: 2.3em;
   font-family: Tahoma, Verdana, Segoe, sans-serif;
   font-size: 11px;
   color: rgba(0,0,0,.7);
@@ -87,9 +90,5 @@ h1 span {
 
 /* IMAGES */
 img {
-  margin: 10px 0;
   border: 20px solid rgba(0, 0, 10, .1);
-  -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
-  -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
-  box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
 }
