--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -34,6 +34,7 @@ body {
 
 .recipe-box {
   margin: 0 auto;
+  padding-bottom: 50px;
   width: 80%;
   height: 100%;
   height: 1%; 
@@ -44,14 +45,23 @@ body {
 .single-recipe {
   width: 170px;
   height: 170px;
-  margin: 10px 10px 0;
-  background-color: rgba(230, 219, 195, 1);
+  margin: 20px 10px 0;
+  background-color: rgba(230, 219, 195, .3);
   position: relative;
   display: inline-block;
   float: left;
   -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
   -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
   box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
+}
+/* LINKS */
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: orange;
 }
 
 /* TEXT */
@@ -65,14 +75,12 @@ p {
   line-height: 1.3;
 }
 
-
-
-.single-recipe .recipe-name {
+.recipe-name {
   text-align: left;
-  margin-top: .3em;
+  margin: 0.3em 1em 0;
   font-family: Tahoma, Verdana, Segoe, sans-serif;
   font-size: 11px;
-  color: rgba(0,0,0,.7);
+  color: rgba(0,0,0,.5);
 }
 
 h1 {
@@ -88,7 +96,13 @@ h1 span {
   font-family: 'Rouge Script', cursive;
 }
 
+h2 {
+  font-family: 'Arvo', serif;
+  font-size: 1em;
+
+}
+
 /* IMAGES */
-img {
+img.image-index {
   border: 20px solid rgba(0, 0, 10, .1);
 }
