Ingredients show dishes, ingredients link to self

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,7 +2,7 @@
   <% @recipes.each do |r| %>
   <div class= "single-recipe">
     <img class = "image-index" width=130 src="<%= r.image %>"/> 
-    <a class="recipe-name" href="/recipes/<%=r.id%>"><%=r.name %></a>
+    <p class = "recipe-name"><%= link_to r.name, recipe_path(r) %></p>
   </div>
     <% end %>
 </div>
