--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -54,14 +54,12 @@ body {
   -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
   box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
 }
-/* LINKS */
 
-a {
-  text-decoration: none;
-}
+/* NAV */
 
-a:hover {
-  color: orange;
+li {
+  list-style-type: none;
+  line-height: 1.2em;
 }
 
 /* TEXT */
@@ -72,21 +70,26 @@ header {
 }
 
 p {
-  line-height: 1.3;
+  line-height: 1.2em;
 }
 
 .recipe-name {
+  font-family: Tahoma, Verdana, Segoe, sans-serif;
   text-align: left;
   margin: 0.3em 1em 0;
-  font-family: Tahoma, Verdana, Segoe, sans-serif;
   font-size: 11px;
+  color: rgba(0,0,0,.5);
+}
+
+.ingredients {
+  font-family: Tahoma, Verdana, Segoe, sans-serif;
+  font-size: 13px;
   color: rgba(0,0,0,.5);
 }
 
 h1 {
   font-family: 'Arvo', serif;
   font-size: 3em;
-  color: white;
   -webkit-text-shadow: 2px 2px rgba(0,0,0,.2);
   -moz-text-shadow: 2px 2px rgba(0,0,0,.2);
   text-shadow: 2px 2px rgba(0,0,0,.2);
@@ -105,4 +108,19 @@ h2 {
 /* IMAGES */
 img.image-index {
   border: 20px solid rgba(0, 0, 10, .1);
+}
+
+/* LINKS */
+
+a {
+  text-decoration: none;
+  color: rgba(0,0,0,.5);
+}
+
+a:hover {
+  color: orange;
+}
+
+h1 a {
+  color: rgba(255, 255, 255, 1);
 }
