--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,12 @@
 <body>
   <div class="topbar">
     <header>
-      <h1>plum <span>pantry</span></h1>
+      <h1><a href="/">plum <span>pantry</span></a></h1>
     </header>
-      
+    <nav>
+      <li><a href="/users/new">sign up</a></li>
+      <li><a href="/session/new">login</a></li>
+    </nav>     
   </div>
   <div class="wrapper">
   <%= yield %>
