--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,5 +1,11 @@
-<h2><%= @recipe.name %></h2>
+<h1><%= @recipe.name%></h1>
 <img width=130 src="<%= @recipe.image %>"/> 
-<% @recipe.ingredients.each do |i| %>
-<p><%= i.name %> </p>
-<% end %>
+
+<h2>ingredients</h2>
+<ul>
+  <% @recipe.ingredients.each do |i| %>
+  <li class = "ingredients"><%= link_to i.name, ingredient_path(i) %></li>
+  <% end %>
+</ul>
+
+<h2>recipes with a similar ingredients list</h2>
