--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -3,6 +3,11 @@
   <div class= "single-recipe">
     <img class = "image-index" width=130 src="<%= r.image %>"/> 
     <p class = "recipe-name"><%= link_to r.name, recipe_path(r) %></p>
+
+    <% if logged_in? %>
+      <%= link_to 'favorite', favorite_recipe_path(r.id), :method => :post %>
+    <% end %>
+
   </div>
     <% end %>
 </div>
