--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,12 +2,10 @@
   <% @recipes.each do |r| %>
   <div class= "single-recipe">
     <img class = "image-index" width=130 src="<%= r.image %>"/> 
-    <p class = "recipe-name"><%= link_to r.name, recipe_path(r) %></p>
-
     <% if logged_in? %>
-      <%= link_to 'favorite', favorite_recipe_path(r.id), :method => :post %>
+      <%= link_to '♥', favorite_recipe_path(r.id), :method => :post, class: "heart" %>
     <% end %>
-
+    <p class = "recipe-name"><%= link_to r.name, recipe_path(r) %></p>
   </div>
     <% end %>
 </div>
