--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,10 @@
 <h2>
   <%= @user.name %>'s pantry items
 </h1>
+ <% @recipes = @user.recipes %>
 
 <div class= "recipe-box">
-  <% @user.recipes.each do |r| %>
-    <div class="single-recipe">
-      <img class = "image-index" width=130 src="<%= r.image %>"/> 
-      <p class = "recipe-name"><%= link_to r.name, recipe_path(r) %></p>
-    </div>
-  <% end %>
+  <%= render '/recipes/single_recipe' %>
 </div>
 
 <h2>
