--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -7,8 +7,13 @@ body {
 
 }
 
+section {
+  margin: 10px;
+}
+
 
 .topbar {
+  min-width: 480px;
   margin-left:0;
   padding: 0;
   top: 0;
@@ -30,6 +35,28 @@ body {
   width: 100%;
   margin: 75px auto 0;
   text-align: center;
+}
+
+.side {
+  margin: 3% 0 3%;
+  padding-bottom: 3%;
+  width: 40%;
+  height: 100%;
+  border: 1px black;
+  background-color: rgba(230, 219, 195, .3);
+  border-radius: 15px;
+  min-width: 200px;
+}
+
+.pantry {
+  float: left;
+  margin-left: 10%;
+}
+
+.suggestions {
+  width: 30%;
+  float: right;
+  margin-right: 10%;
 }
 
 .recipe-box {
@@ -99,6 +126,20 @@ p {
   font-family: Tahoma, Verdana, Segoe, sans-serif;
   font-size: 13px;
   color: rgba(0,0,0,.5);
+}
+
+a.giantheart {
+  font-size: 3em;
+  color: rgba(254, 153, 168, 1);
+  clear: both;
+  margin-top: 10px;
+    -webkit-text-shadow: 1px 2px rgba(0,0,0,.2);
+  -moz-text-shadow: 1px 2px rgba(0,0,0,.2);
+  text-shadow: 1px 2px rgba(0,0,0,.2);
+}
+
+a.giantheart:hover {
+  color: rgba(255, 0, 0, 1);
 }
 
 h1 {
