--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -131,11 +131,11 @@ p {
 }
 
 a.giantheart {
+  line-height: 1em;
   font-size: 3em;
   color: rgba(254, 153, 168, 1);
   clear: both;
-  margin-top: 10px;
-    -webkit-text-shadow: 1px 2px rgba(0,0,0,.2);
+  -webkit-text-shadow: 1px 2px rgba(0,0,0,.2);
   -moz-text-shadow: 1px 2px rgba(0,0,0,.2);
   text-shadow: 1px 2px rgba(0,0,0,.2);
 }
@@ -159,6 +159,13 @@ h1 span {
 h2 {
   font-family: 'Arvo', serif;
   font-size: 1em;
+
+}
+
+h3 {
+  letter-spacing: 1px;
+  font-family: 'Arvo', serif;
+  font-size: 2em;
 
 }
 
