pantry top padding

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -39,7 +39,7 @@ section {
 
 .side {
   margin: 3% 0 3%;
-  padding-bottom: 3%;
+  padding: 1% 0 3%;
   width: 40%;
   height: 100%;
   border: 1px black;
