Users delete recipes from pantry

--- a/app/views/recipes/_single_recipe.erb
+++ b/app/views/recipes/_single_recipe.erb
@@ -5,6 +5,10 @@
     <% if logged_in? %>
       <%= link_to '♥', favorite_recipe_path(r.id), :method => :post, class: "heart" %>
     <% end %>
+
+    <% if logged_in? && current_user.favorites.include?(r.name)%>
+      <%= link_to 'X', remove_recipe_path(r.id), :method => :remove, class: "heart" %>
+    <% end %>
     <p class = "recipe-name"><%= link_to r.name, recipe_path(r) %></p>
 </div>
     <% end %>
