--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -41,18 +41,17 @@ section {
   margin: 3% 0 3%;
   padding: 1% 0 3%;
   width: 40%;
-  height: 100%;
+  height: 550px;
   border: 1px black;
   background-color: rgba(230, 219, 195, .3);
   border-radius: 15px;
   min-width: 200px;
+  overflow: scroll;
 }
 
 .pantry {
   float: left;
   margin-left: 10%;
-  height: 550px;
-  overflow: scroll;
 }
 
 .suggestions {
@@ -61,6 +60,9 @@ section {
   margin-right: 10%;
 }
 
+.grocery_list {
+  margin-top: 1em;
+}
 .recipe-box {
   margin: 0 auto;
   padding-bottom: 50px;
