--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,10 +1,10 @@
 
-<h1><%= @ingredient.name.downcase %></h1>
+<h3><%= @ingredient.name.downcase %></h3>
 <h2>Other recipes with <%= @ingredient.name %> </h2>
 <div class="recipe-box">
 
   <ul>
-    <% @ingredient.recipe)suggest.each do |r| %>
+    <% @ingredient.recipe_suggest.each do |r| %>
     <%= render '/recipes/single_recipe' %>
   <% end %>
   </ul>
