--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -4,8 +4,12 @@
 <div class="recipe-box">
 
   <ul>
-    <% @ingredient.recipe_suggest.each do |r| %>
-    <%= render '/recipes/single_recipe' %>
-  <% end %>
+    <% if @ingredient.recipe_suggest %>
+      <% @ingredient.recipe_suggest.each do |r| %>
+        <%= render '/recipes/single_recipe' %>
+      <% end %>
+    <% else %>
+      <%= render '/recipes/single_recipe' %>
+    <% end %>
   </ul>
 </div>
