--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -161,6 +161,7 @@ h1 span {
 h2 {
   font-family: 'Arvo', serif;
   font-size: 1em;
+  color: rgba(0,0,0,.75);
 
 }
 
@@ -168,7 +169,8 @@ h3 {
   margin-bottom: .5em;
   letter-spacing: 1px;
   font-family: 'Arvo', serif;
-  font-size: 2em;
+  font-size: 1.7em;
+  color: rgba(0,0,0,.75);
 
 }
 
