--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -187,7 +187,7 @@ a {
 }
 
 a:hover {
-  color: orange;
+  color: rgba(255, 156, 33, 1);
 }
 
 h1 a {
@@ -204,4 +204,38 @@ a.heart:hover {
   transform:scale(1.2);
   -moz-transform:scale(1.2); 
   -webkit-transform:scale(1.2);
+}
+
+
+/* FORM */
+
+.form {
+  width: 200px;
+  margin: 0 auto;
+}
+
+label{
+  float: left;
+  margin: .2em 0 1em;
+  font-family: Tahoma, Verdana, Segoe, sans-serif;
+  font-size: .8em;
+  clear: both;
+}
+input {
+  float: right;
+
+}
+
+.submit {
+  margin-top: 1em;
+  width: 50px;
+  background-color: pink;
+  border: 0;
+  border-radius: 15px;
+  color: white;
+
+}
+
+.submit:hover {
+  color: rgba(255, 156, 33, 1);
 }
