--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,5 +17,5 @@
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
 
-  <%= f.submit %>
+  <%= f.submit  class: "submit"%>
 <% end %>
