--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -152,10 +152,13 @@ h1 {
   -webkit-text-shadow: 2px 2px rgba(0,0,0,.2);
   -moz-text-shadow: 2px 2px rgba(0,0,0,.2);
   text-shadow: 2px 2px rgba(0,0,0,.2);
+  color: rgba(255,255,255,1);
 }
 
 h1 span {
   font-family: 'Rouge Script', cursive;
+  color: rgba(255,255,255,1);
+
 }
 
 h2 {
@@ -191,7 +194,7 @@ a:hover {
 }
 
 h1 a {
-  color: rgba(255, 255, 255, 1);
+  color: rgba(255,255,255,1);
 }
 
 a.heart {
@@ -210,8 +213,9 @@ a.heart:hover {
 /* FORM */
 
 .form {
-  width: 300px;
+  width: 260px;
   margin: 0 auto;
+  color: rgba(0,0,0,.5);
 }
 
 label{
@@ -227,15 +231,15 @@ input {
 }
 
 .submit {
-  margin-top: 1em;
-  width: 50px;
-  background-color: pink;
+  margin-top: .5em;
+  background-color: rgba(254, 153, 168, 1);
   border: 0;
   border-radius: 15px;
   color: white;
+  clear: both;
 
 }
 
 .submit:hover {
-  color: rgba(255, 156, 33, 1);
+  background-color: rgba(255, 156, 33, 1);
 }
