--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -11,6 +11,35 @@ section {
   margin: 10px;
 }
 
+.giant-box {
+  top: 10em;
+  padding: 50px;
+  margin: 0 30%;
+  position: fixed;
+  width: 500px;
+  height: 300px;
+  z-index: 100;
+  background-color: rgba(255, 156, 33, 1);
+  border-radius: 10px;
+}
+
+.pretty-ribbon {
+  top: 20%;
+  padding: 70px;
+  margin: 2em;
+  position: fixed;
+  width: 300px;
+  height: 100px;
+  z-index: 100;
+  border: 1px dotted white;
+  border-radius: 10px;
+}
+
+.top {
+  position: fixed;
+  top: 440px;
+  margin: 0 12em;
+}
 
 .topbar {
   min-width: 480px;
@@ -49,12 +78,12 @@ section {
   overflow: scroll;
 }
 
-.pantry {
+.left {
   float: left;
   margin-left: 10%;
 }
 
-.suggestions {
+.right {
   width: 30%;
   float: right;
   margin-right: 10%;
@@ -87,6 +116,16 @@ section {
 }
 
 /* NAV */
+
+.login {
+  font-family: Tahoma, Verdana, Segoe, sans-serif;
+  color: white;
+  text-transform: uppercase;
+}
+
+.login:hover {
+  color: black;
+}
 
 nav {
   float: right;
@@ -153,6 +192,7 @@ h1 {
   -moz-text-shadow: 2px 2px rgba(0,0,0,.2);
   text-shadow: 2px 2px rgba(0,0,0,.2);
   color: rgba(255,255,255,1);
+  margin-bottom: .5em;
 }
 
 h1 span {
@@ -218,7 +258,7 @@ a.heart:hover {
 
 .form {
   width: 260px;
-  margin: 0 auto;
+  margin: 0 auto 7em;
   color: rgba(0,0,0,.5);
 }
 
@@ -236,7 +276,8 @@ input {
 
 .submit {
   margin-top: .5em;
-  background-color: rgba(254, 153, 168, 1);
+  width: 260px;
+  background-color: rgba(0, 0, 0, .1);
   border: 0;
   border-radius: 15px;
   color: white;
@@ -245,5 +286,6 @@ input {
 }
 
 .submit:hover {
-  background-color: rgba(255, 156, 33, 1);
+  background-color: rgba(254, 153, 168, 1);
+  cursor: pointer;
 }
