--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,13 @@
  <% @recipes = @user.recipes %>
 
-<div class= "side pantry">
+<div class= "side left">
   <h2>
   <%= @user.name.downcase %>'s pantry items
 </h1>
   <%= render '/recipes/single_recipe' %>
 </div>
 
-<div class= "side suggestions">
+<div class= "side right">
 <h2>
   <%= @user.name.downcase %>'s grocery list
 </h2>
