Large Image Hack

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,6 @@
 <div class = "recipe-box">
   <h3><%= @recipe.name%></h3>
-  <img width=130 src="<%= @recipe.image %>"/> 
+  <img width=300 class="large-image" src="<%= @recipe.large_image %>"/> 
   <section class="ingredients-box">
     <h2>ingredients</h2>
     <ul>
@@ -9,13 +9,11 @@
       <% end %>
     </ul>
   </section>
-
   <p>
     <% unless !logged_in? || @current_user.favorites.include?(@recipe.name)%>
       <%= link_to '♥', favorite_recipe_path(@recipe.id), :method => :post, class: "giantheart" %>
     <% end %>
   </p>
-
   <% unless @recipe.similar.nil? %>
     <h2>recipes with a similar ingredients list</h2>
         <%= render '/recipes/single_recipe' %>
