--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -220,6 +220,14 @@ img.image-index {
   border: 20px solid rgba(0, 0, 10, .1);
 }
 
+.large-image {
+  border: 5px solid rgba(230, 219, 195, .3);
+  border-radius: 10px;
+  -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
+  -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
+  box-shadow: 2px 2px 5px 0px rgba(0,0,0,.2);
+}
+
 /* LINKS */
 
 a {
