--- a/app/views/recipes/_single_recipe.erb
+++ b/app/views/recipes/_single_recipe.erb
@@ -2,7 +2,7 @@
     <div class= "single-recipe">
 
     <img class = "image-index" width=130 height=80 src="<%= r.image %>"/> 
-    <% unless !logged_in? || current_user.favorites.include?(r.name)%>
+    <% unless !logged_in? || current_user.recipes.include?(r.name)%>
       <%= link_to '♥', favorite_recipe_path(r.id), :method => :post, class: "heart" %>
     <% end %>
 
